--- a/client/src/App.css
+++ b/client/src/App.css
@@ -575,3 +575,32 @@ button {
     padding: 0.3rem 0.4rem;
   }
 }
+
+/* .login_modal {
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
+
+.backdrop {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+.backdrop .child {
+  display: flex;
+  flex-direction: column;
+  max-width: 40%;
+  max-height: 40%;
+  margin: 300px auto;
+  box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.5);
+  border: 3px solid white;
+  background-color: #fff;
+  align-items: center;
+  justify-content: center;
+}
