--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 /* Global Styles */
 :root {
   --primary-color: #17a2b8;
-  --dark-color: #343a40;
+  --dark-color: #282c34;
   --light-color: #f4f4f4;
   --danger-color: #dc3545;
   --success-color: #28a745;
@@ -14,11 +14,12 @@
 }
 
 body {
-  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    'Helvetica Neue', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
-  background-color: #eef0f1;
+  background-color: #fcfcfc;
   color: #333;
 }
 
@@ -27,24 +28,19 @@ a {
   text-decoration: none;
 }
 
-ul {
-  list-style: none;
-}
-
 img {
   width: 100%;
 }
 
 /* Utilities */
 .container {
-  max-width: 1100px;
+  max-width: 1200px;
   margin: auto;
   overflow: hidden;
   padding: 0 2rem;
   margin-top: 6rem;
   margin-bottom: 3rem;
 }
-
 /* Text Styles*/
 .x-large {
   font-size: 4rem;
@@ -156,7 +152,15 @@ img {
   background: var(--light-color);
   color: #333;
 }
-
+.btn-dark,
+.btn-white,
+.btn-danger,
+.btn-dark,
+.btn-light,
+.btn-primary,
+.btn-success {
+  border-radius: 5px;
+}
 .btn-primary,
 .bg-primary,
 .badge-primary,
@@ -217,6 +221,7 @@ img {
 
 .round-img {
   border-radius: 50%;
+  width: 40px;
 }
 
 .line {
@@ -246,10 +251,10 @@ img {
   color: #888;
 }
 
-.form input[type="text"],
-.form input[type="email"],
-.form input[type="password"],
-.form input[type="date"],
+.form input[type='text'],
+.form input[type='email'],
+.form input[type='password'],
+.form input[type='date'],
 .form select,
 .form textarea {
   display: block;
@@ -259,7 +264,7 @@ img {
   border: 1px solid #ccc;
 }
 
-.form input[type="submit"],
+.form input[type='submit'],
 button {
   font: inherit;
 }
@@ -315,6 +320,7 @@ button {
 
 .navbar ul {
   display: flex;
+  list-style: none;
 }
 
 .navbar a {
@@ -334,7 +340,7 @@ button {
 /* Landing Page */
 .landing {
   position: relative;
-  background: url("./img/showcase.jpg") no-repeat center center/cover;
+  background: url('./img/showcase.jpg') no-repeat center center/cover;
   height: 100vh;
 }
 
@@ -365,10 +371,10 @@ button {
 .profile-grid {
   display: grid;
   grid-template-areas:
-    "top top"
-    "about about"
-    "exp edu"
-    "github github";
+    'top top'
+    'about about'
+    'exp edu'
+    'github github';
   grid-gap: 1rem;
 }
 
@@ -463,7 +469,7 @@ button {
 .post {
   display: grid;
   grid-template-columns: 1fr 4fr;
-  grid-gap: 2rem;
+  grid-gap: 1rem;
   align-items: center;
   box-shadow: 0 0 0 1px rgba(8, 9, 10, 0.1);
   border: unset;
@@ -472,10 +478,6 @@ button {
 
 .post > div:first-child {
   text-align: center;
-}
-
-.post img {
-  width: 100px;
 }
 
 .post .comment-count {
@@ -554,11 +556,11 @@ button {
 
   .profile-grid {
     grid-template-areas:
-      "top"
-      "about"
-      "exp"
-      "edu"
-      "github";
+      'top'
+      'about'
+      'exp'
+      'edu'
+      'github';
   }
 
   .profile-about .skills {
@@ -607,4 +609,8 @@ button {
   background-color: #fff;
   align-items: center;
   justify-content: center;
+}
+
+.test {
+  margin-top: 0;
 }
