--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,9 +14,8 @@
 }
 
 body {
-  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-    'Helvetica Neue', sans-serif;
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-size: 1rem;
   line-height: 1.6;
   background-color: #fcfcfc;
@@ -34,7 +33,7 @@ img {
 
 /* Utilities */
 .container {
-  max-width: 1200px;
+  max-width: 1400px;
   margin: auto;
   overflow: hidden;
   padding: 0 2rem;
@@ -251,10 +250,10 @@ img {
   color: #888;
 }
 
-.form input[type='text'],
-.form input[type='email'],
-.form input[type='password'],
-.form input[type='date'],
+.form input[type="text"],
+.form input[type="email"],
+.form input[type="password"],
+.form input[type="date"],
 .form select,
 .form textarea {
   display: block;
@@ -264,7 +263,7 @@ img {
   border: 1px solid #ccc;
 }
 
-.form input[type='submit'],
+.form input[type="submit"],
 button {
   font: inherit;
 }
@@ -340,7 +339,7 @@ button {
 /* Landing Page */
 .landing {
   position: relative;
-  background: url('./img/showcase.jpg') no-repeat center center/cover;
+  background: url("./img/showcase.jpg") no-repeat center center/cover;
   height: 100vh;
 }
 
@@ -371,10 +370,10 @@ button {
 .profile-grid {
   display: grid;
   grid-template-areas:
-    'top top'
-    'about about'
-    'exp edu'
-    'github github';
+    "top top"
+    "about about"
+    "exp edu"
+    "github github";
   grid-gap: 1rem;
 }
 
@@ -468,17 +467,19 @@ button {
 
 .post {
   display: grid;
-  grid-template-columns: 1fr 4fr;
+  grid-template-columns: 1fr 11fr 4fr;
   grid-gap: 1rem;
-  align-items: center;
-  box-shadow: 0 0 0 1px rgba(8, 9, 10, 0.1);
   border: unset;
   border-radius: 5px;
 }
 
-.post > div:first-child {
+/* .post img {
+  max-width: 100%;
+  height: auto;
+} */
+/* .post > div:first-child {
   text-align: center;
-}
+} */
 
 .post .comment-count {
   background: var(--light-color);
@@ -556,11 +557,11 @@ button {
 
   .profile-grid {
     grid-template-areas:
-      'top'
-      'about'
-      'exp'
-      'edu'
-      'github';
+      "top"
+      "about"
+      "exp"
+      "edu"
+      "github";
   }
 
   .profile-about .skills {
@@ -608,9 +609,21 @@ button {
   border: 3px solid white;
   background-color: #fff;
   align-items: center;
+  border-radius: 5px;
   justify-content: center;
 }
 
-.test {
-  margin-top: 0;
+.backdrop .guide-markdown {
+  margin: 100px auto;
+  max-height: 60%;
+  max-width: 30%;
+}
+.backdrop .add-image {
+  margin: 100px auto;
+  max-height: 30%;
+  max-width: 30%;
+}
+.post-item img,
+.preview img {
+  border-radius: 5px;
 }
