--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,8 @@
 /* Global Styles */
 :root {
   --primary-color: #17a2b8;
-  --dark-color: #282c34;
-  --light-color: #f4f4f4;
+  --dark-color: #363c44;
+  --light-color: #f6f6f6;
   --danger-color: #dc3545;
   --success-color: #28a745;
 }
@@ -19,7 +19,7 @@ body {
     'Helvetica Neue', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
-  background-color: #fcfcfc;
+  background-color: #eef0f1;
   color: #333;
 }
 
@@ -34,7 +34,7 @@ a {
 
 /* Utilities */
 .container {
-  max-width: 1400px;
+  max-width: 1250px;
   margin: auto;
   overflow: hidden;
   padding: 0 2rem;
@@ -222,6 +222,12 @@ a {
 .round-img {
   border-radius: 50%;
   width: 40px;
+  height: 40px;
+}
+.round-img-feed {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
 }
 
 .line {
@@ -616,13 +622,14 @@ button {
 
 .backdrop .guide-markdown {
   margin: 100px auto;
-  max-height: 60%;
-  max-width: 30%;
+  min-height: 60%;
+  width: 30%;
 }
 .backdrop .add-image {
   margin: 100px auto;
-  max-height: 30%;
-  max-width: 30%;
+  min-height: 30%;
+  width: 30%;
+  padding: 30px;
 }
 .post-item img,
 .preview img {
@@ -632,13 +639,25 @@ button {
 }
 .progress-bar {
   height: 5px;
-  background: var(--success-color);
+  background: #282c34;
   margin-top: 20px;
 }
-.output {
-  height: 60px;
-  font-size: 0.8rem;
-}
+
 .error {
   color: var(--danger-color);
+  text-align: center;
+}
+.post.feed {
+  grid-template-columns: 2fr 5fr 2fr;
+}
+.post .right-side-feed,
+.post .left-side-feed,
+.post-feed {
+  box-shadow: rgba(8, 9, 10, 0.1) 0px 0px 0px 1px;
+  border: unset;
+  border-radius: 5px;
+}
+
+.title-hover:hover h3 {
+  color: #3b49df;
 }
