add setting comp

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -4,6 +4,9 @@ blockquote {
   padding-left: 3em;
   border-left: 0.5em #eee solid;
 }
+pre {
+  margin: 10px auto;
+}
 code {
   border-radius: 5px;
 }
