--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,12 +14,13 @@
 }
 
 body {
-  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    'Helvetica Neue', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
   background-color: #eef0f1;
-  color: #333;
+  color: #363c44;
 }
 
 a {
@@ -64,6 +65,9 @@ a {
   color: var(--dark-color);
 }
 
+.text-danger {
+  color: var(--danger-color);
+}
 /* Padding */
 .p {
   padding: 0.5rem;
@@ -250,10 +254,10 @@ a {
   color: #888;
 }
 
-.form input[type="text"],
-.form input[type="email"],
-.form input[type="password"],
-.form input[type="date"],
+.form input[type='text'],
+.form input[type='email'],
+.form input[type='password'],
+.form input[type='date'],
 .form select,
 .form textarea {
   display: block;
@@ -263,7 +267,7 @@ a {
   border: 1px solid #ccc;
 }
 
-.form input[type="submit"],
+.form input[type='submit'],
 button {
   font: inherit;
 }
@@ -346,7 +350,7 @@ button {
 /* Landing Page */
 .landing {
   position: relative;
-  background: url("./img/showcase.jpg") no-repeat center center/cover;
+  background: url('./img/showcase.jpg') no-repeat center center/cover;
   height: 100vh;
 }
 
@@ -377,10 +381,10 @@ button {
 .profile-grid {
   display: grid;
   grid-template-areas:
-    "top top"
-    "about about"
-    "exp edu"
-    "github github";
+    'top top'
+    'about about'
+    'exp edu'
+    'github github';
   grid-gap: 1rem;
 }
 
@@ -556,11 +560,11 @@ button {
 
   .profile-grid {
     grid-template-areas:
-      "top"
-      "about"
-      "exp"
-      "edu"
-      "github";
+      'top'
+      'about'
+      'exp'
+      'edu'
+      'github';
   }
 
   .profile-about .skills {
@@ -625,9 +629,11 @@ button {
   height: auto;
   border-radius: 5px;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 8px auto;
 }
+/* .post-item {
+  line-height: 1.8;
+} */
 .progress-bar {
   height: 5px;
   background: #3b49df;
@@ -682,6 +688,13 @@ button {
 }
 .btn-nav {
   margin-right: 15px;
+}
+.comment-nav,
+.chat-nav {
+  background-color: unset;
+}
+.nav-hover:hover a {
+  background-color: var(--light-color);
 }
 .avatar-feed:hover img {
   opacity: 0.8;
@@ -763,22 +776,27 @@ li:hover .action-feed_s {
 .reset-pwd {
   height: 450px;
 }
-
+.active-acc {
+  height: 300px;
+}
 /* Settings */
 .settings {
   display: grid;
-  grid-template-columns: 2fr 5fr;
+  grid-template-columns: 2fr 6fr;
   grid-gap: 1rem;
 }
 .side-setting {
-  height: 200px;
+}
+.main-setting {
+  border: unset;
+  border-radius: 5px;
+}
+.main-setting__dashboard {
+  padding: 15px;
   box-shadow: 0 0 0 1px rgba(8, 9, 10, 0.1);
   border: unset;
   border-radius: 5px;
 }
-.main-setting {
-  height: 200px;
-  box-shadow: 0 0 0 1px rgba(8, 9, 10, 0.1);
-  border: unset;
-  border-radius: 5px;
+.form-group.form-fix {
+  margin-top: 6px;
 }
