--- a/client/src/App.css
+++ b/client/src/App.css
@@ -629,6 +629,7 @@ button {
 }
 .post-item {
   word-break: break-word;
+  overflow-x: auto;
 }
 .post-item img,
 .preview img,
@@ -638,9 +639,17 @@ button {
   border-radius: 5px;
   display: block;
 }
+
 .post-item img,
 .preview img {
   margin: 15px 0;
+}
+
+.comment-item {
+  overflow-x: hidden;
+}
+.comment-content {
+  overflow-x: auto;
 }
 .comment-item img {
   margin: 5px 0;
@@ -849,6 +858,7 @@ li:hover .action-feed_s {
 } */
 .main-post-item {
   padding: 30px 60px;
+  overflow-x: hidden;
 }
 .side-post-item .box {
   padding: 15px;
