improve performance follow action

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -480,6 +480,7 @@ button {
   gap: 1rem;
   border: unset;
   border-radius: 5px;
+  align-items: flex-start;
 }
 
 .post .comment-count {
@@ -843,6 +844,7 @@ li:hover .action-feed_s {
   margin-top: 6px;
 }
 /* post item  */
+
 .main-post-item,
 .side-post-item .box {
   box-shadow: rgba(8, 9, 10, 0.1) 0px 0px 0px 1px;
