--- a/client/src/App.css
+++ b/client/src/App.css
@@ -640,7 +640,15 @@ button {
   border-radius: 5px;
   display: block;
 }
-
+.reply-area {
+  width: 85%;
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+}
+.reply-item {
+  width: 100%;
+}
 .post-item img,
 .preview img {
   margin: 12px 0;
@@ -668,6 +676,9 @@ button {
   height: 5px;
   background: #3b49df;
   margin-top: 20px;
+}
+.action-comt.show-reply {
+  margin: -15px 0 12px 0;
 }
 .action-comt {
   margin: 0 8px 8px 0;
