--- a/client/src/App.css
+++ b/client/src/App.css
@@ -84,6 +84,9 @@ a {
 .py {
   padding: 0.5rem 0;
 }
+.py-1-fix {
+  padding: 0.5rem 0 1rem 0;
+}
 .py-1 {
   padding: 1rem 0;
 }
@@ -285,7 +288,7 @@ a {
 button {
   font: inherit;
 }
-textarea {
+.form textarea {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   -ms-transition: all 0.2s ease-in-out;
@@ -303,7 +306,7 @@ input[type="password"] {
   padding: 3px 0px 3px 3px;
   margin: 5px 1px 3px 0px;
 }
-textarea:focus {
+.form textarea:focus {
   box-shadow: 0 0 5px royalblue;
   border: 1px solid royalblue;
 }
@@ -311,8 +314,8 @@ input[type="text"]:focus,
 input[type="email"]:focus,
 input[type="password"]:focus {
   box-shadow: 0 0 5px royalblue;
-  padding: 3px 0px 3px 3px;
-  margin: 5px 1px 3px 0px;
+  /* padding: 3px 0px 3px 3px;
+  margin: 5px 1px 3px 0px; */
   border: 1px solid royalblue;
 }
 
@@ -372,7 +375,7 @@ input[type="password"]:focus {
   margin: auto;
   align-items: center;
   justify-content: space-between;
-  padding: 0.6rem 2rem;
+  padding: 0.25rem 2rem;
   position: relative;
 }
 .logo {
@@ -640,7 +643,6 @@ input[type="password"]:focus {
   text-align: center;
 }
 .post.feed {
-  margin-top: 1rem;
   grid-template-columns: 2fr 5fr 2fr;
 }
 .post .right-side-feed,
@@ -652,7 +654,7 @@ input[type="password"]:focus {
   word-break: break-word;
 }
 
-.title-hover:hover h3 {
+.title-hover:hover h1 {
   color: #3b49df;
 }
 .btn-hover {
@@ -686,7 +688,7 @@ input[type="password"]:focus {
   right: 0%;
   top: 100%;
   width: 250px;
-  height: 280px;
+  height: auto;
   box-shadow: 3px 5px 1px 1px var(--dark-color);
   border: 2px solid var(--dark-color);
   border-radius: 5px;
@@ -712,6 +714,7 @@ input[type="password"]:focus {
 .action-feed__user {
   padding-left: 0;
   list-style: none;
+  word-break: break-word;
 }
 .logout {
   border-top: 1px solid var(--dark-color);
@@ -913,4 +916,158 @@ li:hover .action-feed_s {
   border-radius: 5px;
   font-size: 1rem;
   padding: 8px;
+}
+/* page not found */
+notfound {
+  position: relative;
+  height: 100vh;
+}
+
+#notfound .notfound {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.notfound {
+  max-width: 520px;
+  width: 100%;
+  line-height: 1.4;
+  text-align: center;
+}
+
+.notfound .notfound-404 {
+  position: relative;
+  height: 240px;
+}
+
+.notfound .notfound-404 h1 {
+  font-family: "Montserrat", sans-serif;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  font-size: 252px;
+  font-weight: 900;
+  margin: 0px;
+  color: #262626;
+  text-transform: uppercase;
+  letter-spacing: -40px;
+  margin-left: -20px;
+}
+
+.notfound .notfound-404 h1 > span {
+  text-shadow: -8px 0px 0px #fff;
+}
+
+.notfound .notfound-404 h3 {
+  font-family: "Cabin", sans-serif;
+  position: relative;
+  font-size: 16px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #262626;
+  margin: 0px;
+  letter-spacing: 3px;
+  padding-left: 6px;
+}
+
+.notfound h2 {
+  font-family: "Cabin", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #000;
+  margin-top: 0px;
+  margin-bottom: 25px;
+}
+
+@media only screen and (max-width: 767px) {
+  .notfound .notfound-404 {
+    height: 200px;
+  }
+  .notfound .notfound-404 h1 {
+    font-size: 200px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .notfound .notfound-404 {
+    height: 162px;
+  }
+  .notfound .notfound-404 h1 {
+    font-size: 162px;
+    height: 150px;
+    line-height: 162px;
+  }
+  .notfound h2 {
+    font-size: 16px;
+  }
+}
+
+/* profiile user */
+.me {
+  margin-top: 3.5rem;
+  width: 100%;
+}
+.me__banner {
+  height: 130px;
+  background-color: royalblue;
+}
+.me__wrap {
+  max-width: 1260px;
+  margin: auto;
+  display: grid;
+  padding: 70px 15px 15px 15px;
+  position: relative;
+  word-break: break-word;
+}
+.me__content {
+  box-shadow: rgba(8, 9, 10, 0.1) 0px 0px 0px 1px;
+  border: unset;
+  outline: unset;
+  border-radius: 5px;
+  padding: 15px;
+  height: auto;
+  width: 100%;
+}
+.me__top {
+  display: flex;
+  justify-content: center;
+  margin-top: -90px;
+  padding: 12px;
+}
+
+.round-img.me-avatar {
+  width: 130px;
+  height: 130px;
+  padding: 10px;
+  background-color: royalblue;
+}
+.me__info {
+  display: flex;
+  flex-direction: column;
+  padding: 12px;
+  align-items: center;
+}
+.me-bio {
+  font-size: 1.1rem;
+  padding: 8px;
+}
+.me-meta {
+  display: flex;
+  padding: 8px;
+}
+.me-meta a,
+p {
+  margin: auto 8px;
+  color: #64707d;
+}
+.me-meta a:hover i {
+  color: royalblue;
 }
