--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,9 +14,8 @@
 }
 
 body {
-  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-    'Helvetica Neue', sans-serif;
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-size: 1rem;
   line-height: 1.6;
   background-color: #eef0f1;
@@ -272,52 +271,50 @@ a {
   color: #888;
 }
 
-.form input[type='text'],
-.form input[type='email'],
-.form input[type='password'],
-.form input[type='date'],
+.form input[type="text"],
+.form input[type="email"],
+.form input[type="password"],
+.form input[type="date"],
 .form select,
 .form textarea {
   display: block;
   width: 100%;
   padding: 0.4rem;
   font-size: 1.2rem;
-  border: 1px solid #ccc;
+  border: 1px solid #ddd;
 }
 
-.form input[type='submit'],
+.form input[type="submit"],
 button {
   font: inherit;
 }
 .form textarea {
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.18s ease-in-out;
   outline: none;
 }
-input[type='text'],
-input[type='email'],
-input[type='password'] {
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+  /* transition: all 0.15s ease-in-out; */
   outline: none;
   padding: 3px 0px 3px 3px;
   margin: 5px 1px 3px 0px;
 }
 .form textarea:focus {
-  box-shadow: 0 0 5px royalblue;
-  border: 1px solid royalblue;
+  /* box-shadow: 0 0 5px royalblue; */
+  border-top: 1px solid royalblue;
+  border-left: 1px solid royalblue;
+  border-right: 2px solid royalblue;
+  border-bottom: 2px solid royalblue;
 }
-input[type='text']:focus,
-input[type='email']:focus,
-input[type='password']:focus {
-  box-shadow: 0 0 5px royalblue;
-  /* padding: 3px 0px 3px 3px;
-  margin: 5px 1px 3px 0px; */
-  border: 1px solid royalblue;
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="password"]:focus {
+  /* box-shadow: 0 0 5px royalblue; */
+  border-top: 1px solid royalblue;
+  border-left: 1px solid royalblue;
+  border-right: 2px solid royalblue;
+  border-bottom: 2px solid royalblue;
 }
 
 .form .social-input {
@@ -502,11 +499,11 @@ input[type='password']:focus {
 
   .profile-grid {
     grid-template-areas:
-      'top'
-      'about'
-      'exp'
-      'edu'
-      'github';
+      "top"
+      "about"
+      "exp"
+      "edu"
+      "github";
   }
 
   .profile-about .skills {
@@ -558,17 +555,23 @@ input[type='password']:focus {
 .backdrop .guide-markdown {
   margin: 100px auto;
   min-height: 60%;
-  min-width: 30%;
+  width: 500px;
 }
 .backdrop .edit-comment {
   margin: 100px auto;
   min-height: 30%;
-  min-width: 40%;
+  width: 500px;
 }
 .backdrop .add-image {
   margin: 100px auto;
   min-height: 30%;
-  min-width: 30%;
+  width: 500px;
+  padding: 30px;
+}
+.backdrop .cover-image {
+  margin: 100px auto;
+  min-height: 20%;
+  width: 500px;
   padding: 30px;
 }
 .post-item {
@@ -656,15 +659,14 @@ input[type='password']:focus {
 }
 
 .title-hover:hover h1 {
-  color: #3b49df;
+  color: royalblue;
 }
 .btn-hover {
   background-color: unset;
 }
 .like-action:hover .btn-hover,
 .discuss-action:hover .btn-hover,
-.read-action:hover .btn-hover,
-.close-action:hover .btn-hover {
+.read-action:hover .btn-hover {
   background-color: var(--light-color);
 }
 
@@ -813,6 +815,7 @@ li:hover .action-feed_s {
   border: unset;
   border-radius: 5px;
   word-break: break-word;
+  height: 100%;
 }
 /* .side-post-item {
   display: block;
@@ -832,12 +835,11 @@ li:hover .action-feed_s {
 
 .top-bar {
   height: 30px;
-  background-color: royalblue;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
 .user-info {
-  position: relative;
+  width: fit-content;
 }
 .info-post-item {
   font-size: 0.8rem;
@@ -946,7 +948,7 @@ notfound {
 }
 
 .notfound .notfound-404 h1 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -967,7 +969,7 @@ notfound {
 }
 
 .notfound .notfound-404 h3 {
-  font-family: 'Cabin', sans-serif;
+  font-family: "Cabin", sans-serif;
   position: relative;
   font-size: 16px;
   font-weight: 700;
@@ -979,7 +981,7 @@ notfound {
 }
 
 .notfound h2 {
-  font-family: 'Cabin', sans-serif;
+  font-family: "Cabin", sans-serif;
   font-size: 20px;
   font-weight: 400;
   text-transform: uppercase;
@@ -1053,7 +1055,7 @@ notfound {
 .round-img.me-avatar {
   width: 130px;
   height: 130px;
-  padding: 10px;
+  padding: 8px;
   background-color: royalblue;
 }
 .me__info {
@@ -1102,4 +1104,16 @@ notfound {
 }
 .action-follow {
   align-self: flex-end;
+}
+.container.post-profile {
+  margin-top: 0;
+}
+label #select {
+  height: 0;
+  width: 0;
+  opacity: 0;
+}
+.cover-image__btn {
+  background-color: #fff;
+  box-shadow: rgba(8, 9, 10, 0.1) 0px 0px 0px 1px;
 }
