--- a/client/src/App.css
+++ b/client/src/App.css
@@ -554,7 +554,11 @@ input[type='password']:focus {
   padding: 30px;
   position: relative;
 }
-
+.backdrop .tags-modal {
+  margin: 100px auto;
+  min-height: 20%;
+  width: 500px;
+}
 .backdrop .guide-markdown {
   margin: 100px auto;
   min-height: 60%;
@@ -1138,4 +1142,89 @@ label #select {
 .top-feed__filter .btn {
   padding: 0.2rem 0.6rem;
   border-radius: unset;
+}
+
+/* tags */
+.tags-input {
+  margin: 10px 0;
+}
+
+div.ReactTags__tags {
+  width: 100%;
+  position: relative;
+}
+
+/* Styles for the input */
+div.ReactTags__tagInput {
+  width: 400px;
+  border-radius: 2px;
+  display: inline-block;
+}
+div.ReactTags__tagInput input.ReactTags__tagInputField,
+div.ReactTags__tagInput input.ReactTags__tagInputField:focus {
+  height: 31px;
+  margin: 0;
+  font-size: 1rem;
+  width: 100%;
+  padding: 0 4px;
+  border: unset;
+  outline: none;
+}
+
+/* Styles for selected tags */
+div.ReactTags__selected:focus-within {
+  border-top: 1px solid royalblue;
+  border-left: 1px solid royalblue;
+  border-right: 2px solid royalblue;
+  border-bottom: 2px solid royalblue;
+}
+div.ReactTags__selected {
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+div.ReactTags__selected span {
+  cursor: unset !important;
+  word-break: break-word !important;
+}
+div.ReactTags__selected span.ReactTags__tag {
+  background: royalblue;
+  font-size: 1rem;
+  display: inline-block;
+  padding: 5px;
+  margin: 5px;
+  border-radius: 3px;
+  color: #fff;
+}
+div.ReactTags__selected a.ReactTags__remove {
+  color: #fff;
+  font-size: 1.3rem;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+/* Styles for suggestions */
+div.ReactTags__suggestions {
+  position: absolute;
+}
+div.ReactTags__suggestions ul {
+  list-style-type: none;
+  box-shadow: rgba(8, 9, 10, 0.1) 0px 0px 0px 1px;
+  background: white;
+  min-width: 200px;
+  padding-left: 0;
+}
+div.ReactTags__suggestions li {
+  border-bottom: 1px solid #ddd;
+  padding: 5px 10px;
+  margin: 0;
+}
+div.ReactTags__suggestions li mark {
+  text-decoration: underline;
+  background: none;
+  font-weight: 600;
+}
+div.ReactTags__suggestions ul li.ReactTags__activeSuggestion {
+  cursor: pointer;
+  background: #f0f8ff;
 }
