--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,9 +14,8 @@
 }
 
 body {
-  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-    'Helvetica Neue', sans-serif;
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-size: 1rem;
   line-height: 1.6;
   background-color: #eef0f1;
@@ -111,6 +110,12 @@ a {
 }
 .m-1 {
   margin: 1rem;
+}
+.m-1-tags {
+  margin: 0.3rem 1rem;
+}
+.m-1-actions-feed {
+  margin: 0.3rem 0;
 }
 .m-2 {
   margin: 2rem;
@@ -276,10 +281,10 @@ a {
   color: #888;
 }
 
-.form input[type='text'],
-.form input[type='email'],
-.form input[type='password'],
-.form input[type='date'],
+.form input[type="text"],
+.form input[type="email"],
+.form input[type="password"],
+.form input[type="date"],
 .form select,
 .form textarea {
   display: block;
@@ -289,7 +294,7 @@ a {
   border: 1px solid #ddd;
 }
 
-.form input[type='submit'],
+.form input[type="submit"],
 button {
   font: inherit;
 }
@@ -297,9 +302,9 @@ button {
   transition: all 0.1s ease-in-out;
   outline: none;
 }
-input[type='text'],
-input[type='email'],
-input[type='password'] {
+input[type="text"],
+input[type="email"],
+input[type="password"] {
   transition: all 0.1s ease-in-out;
   outline: none;
   padding: 3px 0px 3px 3px;
@@ -311,9 +316,9 @@ input[type='password'] {
   border-right: 2px solid royalblue;
   border-bottom: 2px solid royalblue;
 }
-input[type='text']:focus,
-input[type='email']:focus,
-input[type='password']:focus {
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="password"]:focus {
   border-top: 1px solid royalblue;
   border-left: 1px solid royalblue;
   border-right: 2px solid royalblue;
@@ -502,11 +507,11 @@ input[type='password']:focus {
 
   .profile-grid {
     grid-template-areas:
-      'top'
-      'about'
-      'exp'
-      'edu'
-      'github';
+      "top"
+      "about"
+      "exp"
+      "edu"
+      "github";
   }
 
   .profile-about .skills {
@@ -657,6 +662,9 @@ input[type='password']:focus {
 }
 .post.feed {
   grid-template-columns: 13.75rem 2fr 1fr;
+}
+.post.feed-profile {
+  grid-template-columns: 16.25rem 1fr 16.25rem;
 }
 .post .right-side-feed,
 .post-feed {
@@ -938,7 +946,7 @@ notfound {
 }
 
 .notfound .notfound-404 h1 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -959,7 +967,7 @@ notfound {
 }
 
 .notfound .notfound-404 h3 {
-  font-family: 'Cabin', sans-serif;
+  font-family: "Cabin", sans-serif;
   position: relative;
   font-size: 16px;
   font-weight: 700;
@@ -971,7 +979,7 @@ notfound {
 }
 
 .notfound h2 {
-  font-family: 'Cabin', sans-serif;
+  font-family: "Cabin", sans-serif;
   font-size: 20px;
   font-weight: 400;
   text-transform: uppercase;
@@ -1227,4 +1235,13 @@ div.ReactTags__suggestions li mark {
 div.ReactTags__suggestions ul li.ReactTags__activeSuggestion {
   cursor: pointer;
   background: #f0f8ff;
+}
+/* tags */
+.tags-item:hover span {
+  color: #08090a;
+}
+.tags-item {
+  font-size: 0.85rem;
+  color: #64707d;
+  padding: 4px;
 }
