--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,8 +14,9 @@
 }
 
 body {
-  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    'Helvetica Neue', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
   background-color: #eef0f1;
@@ -284,10 +285,10 @@ a {
   color: #888;
 }
 
-.form input[type="text"],
-.form input[type="email"],
-.form input[type="password"],
-.form input[type="date"],
+.form input[type='text'],
+.form input[type='email'],
+.form input[type='password'],
+.form input[type='date'],
 .form select,
 .form textarea {
   display: block;
@@ -297,7 +298,7 @@ a {
   border: 1px solid #ddd;
 }
 
-.form input[type="submit"],
+.form input[type='submit'],
 button {
   font: inherit;
 }
@@ -305,9 +306,9 @@ button {
   transition: all 0.1s ease-in-out;
   outline: none;
 }
-input[type="text"],
-input[type="email"],
-input[type="password"] {
+input[type='text'],
+input[type='email'],
+input[type='password'] {
   transition: all 0.1s ease-in-out;
   outline: none;
   padding: 3px 0px 3px 3px;
@@ -319,9 +320,9 @@ input[type="password"] {
   border-right: 2px solid royalblue;
   border-bottom: 2px solid royalblue;
 }
-input[type="text"]:focus,
-input[type="email"]:focus,
-input[type="password"]:focus {
+input[type='text']:focus,
+input[type='email']:focus,
+input[type='password']:focus {
   border-top: 1px solid royalblue;
   border-left: 1px solid royalblue;
   border-right: 2px solid royalblue;
@@ -510,11 +511,11 @@ input[type="password"]:focus {
 
   .profile-grid {
     grid-template-areas:
-      "top"
-      "about"
-      "exp"
-      "edu"
-      "github";
+      'top'
+      'about'
+      'exp'
+      'edu'
+      'github';
   }
 
   .profile-about .skills {
@@ -952,7 +953,7 @@ notfound {
 }
 
 .notfound .notfound-404 h1 {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -973,7 +974,7 @@ notfound {
 }
 
 .notfound .notfound-404 h3 {
-  font-family: "Cabin", sans-serif;
+  font-family: 'Cabin', sans-serif;
   position: relative;
   font-size: 16px;
   font-weight: 700;
@@ -985,7 +986,7 @@ notfound {
 }
 
 .notfound h2 {
-  font-family: "Cabin", sans-serif;
+  font-family: 'Cabin', sans-serif;
   font-size: 20px;
   font-weight: 400;
   text-transform: uppercase;
@@ -1220,6 +1221,8 @@ div.ReactTags__selected a.ReactTags__remove {
 /* Styles for suggestions */
 div.ReactTags__suggestions {
   position: absolute;
+  max-height: 300px;
+  overflow: auto;
 }
 div.ReactTags__suggestions ul {
   list-style-type: none;
